# xgboost_practice

./: README.md  pyproject.toml
notebook/: 01_load_and_validate_raw_data.ipynb  tree  tree.dot
