[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Ryan Slipe <rslipe@my.gcu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
pandas = "^2.2.3"
numpy = "^2.2.1"
scikit-learn = "^1.6.1"
xgboost = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
