[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Ryan Slipe <rslipe@my.gcu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
pandas = "^2.2.3"
numpy = "1.26.4"
scikit-learn = "1.5.1" 
xgboost = "^1.5.2"
matplotlib = "^3.10.0"
optuna = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
